gcc/shrink-wrap.c
@@ -1434,6 +1434,7 @@ emit_common_heads_for_components (sbitmap components)
 	  targetm.shrink_wrap.emit_prologue_components (pro);
 	  rtx_insn *seq = get_insns ();
 	  end_sequence ();
+	  record_prologue_seq (seq);
 
 	  emit_insn_after (seq, bb_note (bb));
 
@@ -1446,6 +1447,7 @@ emit_common_heads_for_components (sbitmap components)
 	  targetm.shrink_wrap.emit_epilogue_components (epi);
 	  rtx_insn *seq = get_insns ();
 	  end_sequence ();
+	  record_epilogue_seq (seq);
 
 	  emit_insn_after (seq, bb_note (bb));
 
@@ -1533,6 +1535,7 @@ emit_common_tails_for_components (sbitmap components)
 	  targetm.shrink_wrap.emit_epilogue_components (epi);
 	  rtx_insn *seq = get_insns ();
 	  end_sequence ();
+	  record_epilogue_seq (seq);
 
 	  if (control_flow_insn_p (last_insn))
 	    emit_insn_before (seq, last_insn);
@@ -1548,6 +1551,7 @@ emit_common_tails_for_components (sbitmap components)
 	  targetm.shrink_wrap.emit_prologue_components (pro);
 	  rtx_insn *seq = get_insns ();
 	  end_sequence ();
+	  record_prologue_seq (seq);
 
 	  if (control_flow_insn_p (last_insn))
 	    emit_insn_before (seq, last_insn);
@@ -1612,6 +1616,7 @@ insert_prologue_epilogue_for_components (sbitmap components)
 	      targetm.shrink_wrap.emit_epilogue_components (epi);
 	      rtx_insn *seq = get_insns ();
 	      end_sequence ();
+	      record_epilogue_seq (seq);
 
 	      if (e->flags & EDGE_SIBCALL)
 		{
@@ -1635,6 +1640,7 @@ insert_prologue_epilogue_for_components (sbitmap components)
 	      targetm.shrink_wrap.emit_prologue_components (pro);
 	      seq = get_insns ();
 	      end_sequence ();
+	      record_prologue_seq (seq);
 
 	      insert_insn_on_edge (seq, e);
 	    }
